--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,30 @@
-/* add css styles here (optional) */
+.eternalList {
+  float: left;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+}
 
-.test {
-  display: inline-block;
-  margin: 2em auto;
-  border: 2px solid #000;
-  font-size: 2em;
+.ilParent {
+  float: left;
+  width: 100%;
+  height: 100%;
+}
+
+.ilDummy{
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  top:-100%;
+  left: -100%;
+}
+
+.dummyContainer {
+  float: left;
+}
+
+.ilParent{
+  float: left;
+  width: 100%;
 }
