--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,5 +1,212 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.app{
+  float: left;
+}
+
+.item-container{
+  float: left;
+  width: 250px;
+  position: fixed;
+  top: 25%;
+  bottom: 25%;
+  left: 50%;
+  margin-left: -125px;
+  box-sizing: border-box;
+  padding: 10px;
+  /* border: 1px solid #ddd; */
+  box-shadow: 10px 10px 40px rgba(0,0,0,0.2);
+  border-radius: 20px;
+  overflow: hidden;
+}
+.item-container.-scroll{
+  overflow-y: auto;
+}
+
+.item{
+  float: left;
+  width: 100%;
+  box-sizing: border-box;
+  height: 30px;
+  margin-bottom: 2px;
+  background: #eee;
+  line-height: 30px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12px;
+  padding-left: 20px;
+  border-radius: 20px;
+  color: #333;
+}
+
+.card {
+  float: left;
+  width: 100%;
+  box-sizing: border-box;
+  height: 60px;
+  margin-bottom: 5px;
+  background: #eee;
+  line-height: 30px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12px;
+  padding-left: 20px;
+  border-radius: 5px;
+  color: #333;
+  position: relative;
+}
+
+.c-image {
+  float: left;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 44px;
+  height: 44px;
+  border: 3px solid #ccc;
+  border-radius: 4px;
+}
+.c-name {
+  float: left;
+  position: absolute;
+  top: 5px;
+  left: 60px;
+  font-weight: 600;
+  line-height: 20px;
+  color: #444;
+}
+.c-desc {
+  float: left;
+  position: absolute;
+  top: 25px;
+  left: 60px;
+  right: 5px;
+  bottom: 5px;
+  overflow: hidden;
+  line-height: 110%;
+  color: rgb(119, 119, 119);
+}
+
+
+/*
+*
+*/
+
+.stats {
+  position: fixed;
+  left: 50%;
+  margin-left: 200px;
+  top: 25%;
+}
+
+.settings {
+  position: fixed;
+  top: 25%;
+  margin-right: 200px;
+  right: 50%;
+}
+.settings .sb-name{
+  width: 100%;
+  text-align: right;
+}
+
+.settings .s-block > * {
+  float: right;
+}
+.s-block{
+  float: left; 
+  width: 100%;
+  position: relative;
+  height: 140px;
+  min-width: 200px;
+  overflow: hidden;
+}
+.sb-name {
+  float: left;
+  font-size: 14px;
+  color: #555;
+  position: absolute;
+  bottom: 55px;
+  /* border-top: 1px solid #eee; */
+}
+.sb-name.-lite{
+  font-size: 11px;
+  color: #777;
+}
+.sb-value {
+  float: left;
+  width: 100%;
+  font-size: 60px;
+  font-weight: 100;
+  color: #555;
+}
+.sb-toggle-button{
+  float: right;
+  border: 1px solid #555;
+  padding: 0 40px;
+  line-height: 60px;
+  font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 100;
+  transition: .2s;
+}
+
+.sb-toggle-button:hover{
+  background: #333;
+  color: #fff;
+  cursor: pointer;
+}
+
+
+.settings input:focus{
+  outline: none;
+  border-bottom: 4px solid #555;
+}
+.settings input{
+  display: block;
+  float: left;
+  box-sizing: border-box;
+  width: 200px;
+  height: 60px;
+  border: none;
+  margin-right: -20px;
+  border-bottom: 1px solid #555;
+  text-align: right;
+  font-size: 42px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 100;
+}
+
+.name{
+  position: fixed;
+  top: 70px;
+  line-height: 70px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 100;
+  font-size: 70px;
+  width: 100%;
+  text-align: center;
+}
+.desc{
+  position: fixed;
+  top: 140px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  width: 50%;
+  left: 25%;
+  color: #888;
+  text-align: center;
+}
+
+::-webkit-scrollbar{ width: 5px; height:5px; }
+:hover::-webkit-scrollbar{ width: 5px; height:5px; }
+::-webkit-scrollbar-button{}
+::-webkit-scrollbar-track{}
+::-webkit-scrollbar-track-piece{}
+::-webkit-scrollbar-thumb{ border-radius: 10px; background: rgba(0,0,0,0.1);}
+:hover::-webkit-scrollbar-thumb{ background: rgba(0,0,0,0.5);}
+::-webkit-scrollbar-corner{}
+::-webkit-resizer{}
